[Rahul] | BAH-3884 | Fix. Ignore Integration Test