@@ -81,12 +81,12 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.18.1</version>
                     <configuration>
-                        <argLine>-Xmx1024m -XX:MaxPermSize=2056m</argLine>
+                        <argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
                         <excludes>
-                            <exclude>**/BaseIntegrationTest.java</exclude>
+                            <exclude>**/integrationtests/</exclude>
                         </excludes>
                     </configuration>
                 </plugin>
